Java 25 LTS estável: JEP 491, ScopedValue, sem StructuredTaskScope preview